tests/files/parser_tests/should_fail/121.cmdr
//Should not parse
x: int) = (2);